[package]
name = "floresta-node"
version = "0.8.0"
edition = "2021"
readme.workspace = true # Floresta/README.md

[dependencies]
axum = { workspace = true, optional = true }
bitcoin = { workspace = true, features = ["serde", "std", "bitcoinconsensus"] }
corepc-types = { workspace = true }
dns-lookup = { workspace = true }
kv = { workspace = true }
miniscript = { workspace = true, features = ["std"] }
rcgen = { workspace = true }
rustreexo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
toml = { workspace = true }
tower-http = { version = "0.6", optional = true, features = ["cors"] }
tracing = { workspace = true }
zmq = { version = "0.10", optional = true }

# Local dependencies
floresta-chain = { workspace = true }
floresta-compact-filters = { workspace = true, optional = true }
floresta-common = { workspace = true }
floresta-electrum = { workspace = true }
floresta-watch-only = { workspace = true }
floresta-wire = { workspace = true }
metrics = { workspace = true,  optional = true }

[dev-dependencies]
pretty_assertions = "1.4"

[target.'cfg(target_env = "gnu")'.dependencies]
libc = "0.2"

[features]
kv-chainstore = ["floresta-chain/kv-chainstore"]
flat-chainstore = ["floresta-chain/flat-chainstore"]
compact-filters = ["dep:floresta-compact-filters"]
zmq-server = ["dep:zmq"]
json-rpc = ["dep:axum", "dep:tower-http", "compact-filters"]
default = ["json-rpc", "flat-chainstore"]
metrics = ["dep:metrics", "floresta-wire/metrics", "floresta-chain/metrics"]

[lints]
workspace = true
