[package]
name = "floresta-rpc"
version = "0.4.0"
edition = "2021"
authors = ["Davidson Souza <davidson.lucas.souza@outlook.com>"]
license = "MIT"
description = """
Floresta is a lightweight Bitcoin node implementation in Rust, utilizing Utreexo for efficient state management.

"""
repository = "https://github.com/vinteumorg/Floresta"
readme = "README.md"
keywords = ["bitcoin", "utreexo", "node", "blockchain", "rust"]
categories = ["cryptography::cryptocurrencies", "command-line-utilities"]

[dependencies]
bitcoin = { version = "0.32", features = ["serde", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonrpc = { version = "0.18.0", optional = true, features = ["minreq_http"] }
clap = { version = "4.0.29", features = ["derive"], optional = true }

[features]
default = ["with-jsonrpc"]
with-jsonrpc = ["dep:jsonrpc"]
clap = ["dep:clap"]

[dev-dependencies]
rand = "0.8.5"
tempfile = "3.9.0"
rcgen = "0.13"

[lib]
name = "floresta_rpc"
path = "src/lib.rs"
