[package]
name = "floresta-rpc"
version = "0.4.0"
edition = "2021"
authors = ["Davidson Souza <davidson.lucas.souza@outlook.com>"]
license = "MIT"
description = """
floresta-rpc is a Rust library that provides a JSON-RPC interface for interacting with Floresta. It allows
users to perform various operations such as querying blockchain data, managing wallets, and
broadcasting transactions through a simple and efficient API.
"""
repository = "https://github.com/vinteumorg/Floresta"
readme = "README.md"
keywords = ["bitcoin", "utreexo", "node", "blockchain", "rust"]
categories = ["cryptography::cryptocurrencies", "command-line-utilities"]

[dependencies]
bitcoin = { version = "0.32", features = ["serde", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonrpc = { version = "0.18.0", features = ["minreq_http"], optional = true }
clap = { version = "4.0.29", features = ["derive"], optional = true }

[features]
default = ["with-jsonrpc"]
with-jsonrpc = ["dep:jsonrpc"]
clap = ["dep:clap"]

[dev-dependencies]
rand = "0.8.5"
rcgen = "0.13"
