[package]
name = "floresta-watch-only"
version = "0.4.0"
edition = "2021"
description = "A simple, lightweight and Electrum-First, watch-only wallet"
authors = ["Davidson Souza <davidson.lucas.souza@outlook.com>"]
keywords = ["bitcoin", "watch-only", "electrum-server"]
categories = ["cryptography::cryptocurrencies"]
license = "MIT"
repository = "https://github.com/vinteumorg/Floresta"
readme.workspace = true # Floresta/README.md

[dependencies]
bitcoin = { workspace = true, features = ["serde"] }
kv = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["alloc"] }

# Local dependencies
floresta-chain = { path = "../floresta-chain" }
floresta-common = { path = "../floresta-common", default-features = false, features = ["descriptors-no-std"] }

[dev-dependencies]
rand = "0.8.5"

[features]
default = ["std"]
memory-database = []
# The default features in common are `std` and `descriptors-std` (which is a superset of `descriptors-no-std`)
std = ["floresta-common/default", "serde/std"]
