[package]
name = "floresta-watch-only"
version = "0.4.1"
edition = "2021"
description = "A simple, lightweight and Electrum-First, watch-only wallet"
authors = ["Davidson Souza <davidson.lucas.souza@outlook.com>"]
keywords = ["bitcoin", "watch-only", "electrum-server"]
categories = ["cryptography::cryptocurrencies"]
license = "MIT"
repository = "https://github.com/vinteumorg/Floresta"
readme = "README.md"

[dependencies]
serde = "1.0.0"
serde_json = { version = "1.0.0", features = ["alloc"] }
bitcoin = { version = "0.32", features = ["serde"] }
kv = "0.24.0"
log = "0.4"
floresta-common = { path = "../floresta-common", default-features = false, features = ["descriptors-no-std"] }
floresta-chain = { path = "../floresta-chain" }

[dev-dependencies]
rand = "0.8.5"

[features]
default = ["std"]
memory-database = []
# The default features in common are `std` and `descriptors-std` (which is a superset of `descriptors-no-std`)
std = ["floresta-common/default", "serde/std"]
