[package]
name = "floresta-wire"
version = "0.4.0"
edition = "2021"
authors = ["Davidson Souza <davidson.lucas.souza@outlook.com>"]
description = """
    Some utreexo-aware wire protocol for floresta. You can use this crate
    to fetch blocks and transactions from the network, and to broadcast
    your own transactions.
"""
repository = "https://github.com/vinteumorg/Floresta"
license = "MIT"
readme = "README.md"
keywords = ["bitcoin", "utreexo", "p2p", "networking"]
categories = ["cryptography::cryptocurrencies", "network-programming"]

[dependencies]
ahash = "0.8"
aws-lc-rs = "=1.13.1" # need due to Nix incompatibility with newer versions of aws-lc-rs
bip324 = { version = "=0.7.0", features = [ "tokio" ] }
bitcoin = { workspace = true, features = ["serde", "std", "bitcoinconsensus"] }
dns-lookup = { workspace = true }
home = "=0.5.11" # need due to Nix incompatibility with newer versions of home
rand = { workspace = true }
rustls = "=0.23.27"
rustreexo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
ureq = { version = "3.1", features = ["socks-proxy", "json", "rustls-no-provider"], default-features = false }

# Local dependencies
floresta-chain = { workspace = true, features = ["flat-chainstore"] }
floresta-compact-filters = { workspace = true }
floresta-common = { workspace = true }
metrics = { workspace = true,  optional = true }

[dev-dependencies]
zstd = { workspace = true }

[features]
default = []
metrics = ["dep:metrics"]

[lints]
workspace = true
