[package]
name = "floresta-wire"
version = "0.4.1"
edition = "2021"
authors = ["Davidson Souza <davidson.lucas.souza@outlook.com>"]
description = """
    Some utreexo-aware wire protocol for floresta. You can use this crate
    to fetch blocks and transactions from the network, and to broadcast
    your own transactions.
"""
repository = "https://github.com/vinteumorg/Floresta"
license = "MIT"
readme = "README.md"
keywords = ["bitcoin", "utreexo", "p2p", "networking"]
categories = ["cryptography::cryptocurrencies", "network-programming"]


[dependencies]
rustreexo = "0.4"
tokio = { version = "1", features = ["full"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
bitcoin = { version = "0.32", features = ["serde", "std", "bitcoinconsensus"] }
dns-lookup = "1.0.8"
floresta-chain = { path = "../floresta-chain" }
floresta-compact-filters = { path = "../floresta-compact-filters" }
thiserror = "1.0"
floresta-common = { path = "../floresta-common" }
oneshot = "0.1.5"
ahash = "0.8.11"
metrics = { path = "../../metrics", optional = true }
bip324 = { version = "0.7.0", features = [ "tokio" ] }
ureq = { version = "3.0.11", features = ["socks-proxy", "json", "rustls-no-provider"], default-features = false }
rustls = "0.23.27"

[dev-dependencies]
zstd = "0.13.3"
hex = "0.4.3"
floresta-chain = { path = "../floresta-chain", features = ["flat-chainstore"] }

[features]
default = []
metrics = ["dep:metrics"]
