[package]
name = "floresta"
version = "0.1.0"
authors = ["Davidson Souza <davidson.lucas.souza@outlook.com>"]
edition = "2021"
description = """
    A modular and extensible framework for building Utreexo based Bitcoin nodes.

    Using libfloresta, you can build lightweight Bitcoin nodes that can be
    extended with plugins to add new features. The library is designed to be
    modular and extensible, so you can easily add new features to your node
    without having to modify the core structs. The framework is also designed to
    be easy to use, so you can get started with your node in a few lines of
    code.

    See the examples directory for examples of how to use this library, and
    each crate's documentation for more information on how to use each module.
"""
repository = "https://github.com/Davidson-Souza/Floresta"
license = "MIT"
readme = "README.md"
keywords = ["bitcoin", "utreexo", "node", "blockchain", "rust"]
categories = ["bitcoin", "blockchain", "node"]

[dependencies]
floresta-common = { path = "../floresta-common", version = "0.1.0" }
floresta-chain = { path = "../floresta-chain", version = "0.1.0" }
floresta-wire = { path = "../floresta-wire", version = "0.1.0" }
floresta-watch-only = { path = "../floresta-watch-only", features = [
    "memory-database",
], optional = true, version = "0.1.0" }
floresta-electrum = { path = "../floresta-electrum", optional = true, version = "0.1.0" }

[dev-dependencies]
rustreexo = "0.2.0"
miniscript = "10"
async-std = "1.12.0"
bitcoin = { version = "0.31", features = [
    "serde",
    "bitcoinconsensus",
], default-features=false }

floresta = { version = "0.1.0", path = "../floresta", features = [
    "bitcoinconsensus",
    "memory-database",
    "electrum-server",
    "watch-only-wallet",
] }
futures = "0.3.30"

[features]
default = ["bitcoinconsensus", "electrum-server", "watch-only-wallet"]
bitcoinconsensus = ["floresta-chain/bitcoinconsensus"]
memory-database = ["floresta-watch-only/memory-database"]
electrum-server = ["floresta-electrum"]
watch-only-wallet = ["floresta-watch-only"]

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[[example]]
name = "node"
path = "examples/node.rs"

[[example]]
name = "watch-only"
path = "examples/watch-only.rs"

[[example]]
name = "chainstate-builder"
path = "examples/chainstate-builder.rs"
