[package]
name = "floresta"
version = "0.4.1"
authors = ["Davidson Souza <davidson.lucas.souza@outlook.com>"]
edition = "2021"
description = """
    A modular and extensible framework for building Utreexo based Bitcoin nodes.

    Using libfloresta, you can build lightweight Bitcoin nodes that can be
    extended with plugins to add new features. The library is designed to be
    modular and extensible, so you can easily add new features to your node
    without having to modify the core structs. The framework is also designed to
    be easy to use, so you can get started with your node in a few lines of
    code.

    See the examples directory for examples of how to use this library, and
    each crate's documentation for more information on how to use each module.
"""
repository = "https://github.com/vinteumorg/Floresta"
license = "MIT"
readme = "README.md"
keywords = ["bitcoin", "utreexo", "node", "blockchain", "rust"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
floresta-common = { path = "../floresta-common", version = "0.4.0" }
floresta-chain = { path = "../floresta-chain", version = "0.4.0" }
floresta-wire = { path = "../floresta-wire", version = "0.4.0" }
floresta-watch-only = { path = "../floresta-watch-only", optional = true, version = "0.4.0" }
floresta-electrum = { path = "../floresta-electrum", optional = true, version = "0.4.0" }

[dev-dependencies]
rustreexo = "0.4"
miniscript = "11"
tokio = { version = "1", features = ["full"] }
bitcoin = { version = "0.32", features = [
    "serde",
    "bitcoinconsensus",
], default-features=false }
floresta = { version = "0.4.0", path = "../floresta", features = [
    "bitcoinconsensus",
    "memory-database",
    "electrum-server",
    "watch-only-wallet",
] }

[features]
default = ["bitcoinconsensus", "electrum-server", "watch-only-wallet", "flat-chainstore"]
bitcoinconsensus = ["floresta-chain/bitcoinconsensus"]
electrum-server = ["dep:floresta-electrum"]
watch-only-wallet = ["dep:floresta-watch-only"]
# Works only if `watch-only-wallet` is set
memory-database = ["floresta-watch-only?/memory-database"]
kv-chainstore = ["floresta-chain/kv-chainstore"]
flat-chainstore = ["floresta-chain/flat-chainstore"]

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[[example]]
name = "node"
path = "examples/node.rs"

[[example]]
name = "watch-only"
path = "examples/watch-only.rs"

[[example]]
name = "chainstate-builder"
path = "examples/chainstate-builder.rs"
