[package]
name = "floresta"
version = "0.4.0"
authors = ["Floresta Developers <contact@getfloresta.org>"]
edition = "2021"
description = """
    A modular and extensible framework for building Utreexo based Bitcoin nodes.

    Using libfloresta, you can build lightweight Bitcoin nodes that can be
    extended with plugins to add new features. The library is designed to be
    modular and extensible, so you can easily add new features to your node
    without having to modify the core structs. The framework is also designed to
    be easy to use, so you can get started with your node in a few lines of
    code.

    See the examples directory for examples of how to use this library, and
    each crate's documentation for more information on how to use each module.
"""
repository = "https://github.com/vinteumorg/Floresta"
license = "MIT"
readme.workspace = true # Floresta/README.md
keywords = ["bitcoin", "utreexo", "node", "blockchain", "rust"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
# Local dependencies
floresta-chain = { workspace = true }
floresta-common = { workspace = true }
floresta-electrum = { workspace = true, optional = true }
floresta-watch-only = { workspace = true, optional = true }
floresta-wire = { workspace = true }

[dev-dependencies]
bitcoin = { workspace = true, features = [ "serde" ] }
miniscript = { workspace = true, features = ["std"] }
rustreexo = { workspace = true }
tokio = { workspace = true }

# Local dependencies
floresta = { path = "../floresta", features = [
    "bitcoinkernel",
    "memory-database",
    "electrum-server",
    "watch-only-wallet",
] }

[features]
default = ["electrum-server", "watch-only-wallet", "bitcoinkernel", "flat-chainstore"]
electrum-server = ["dep:floresta-electrum"]
bitcoinkernel = ["floresta-chain/bitcoinkernel"]
watch-only-wallet = ["dep:floresta-watch-only"]
# Works only if `watch-only-wallet` is set
memory-database = ["floresta-watch-only?/memory-database"]
flat-chainstore = ["floresta-chain/flat-chainstore"]

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[lints]
workspace = true

[[example]]
name = "node"
path = "examples/node.rs"

[[example]]
name = "watch-only"
path = "examples/watch-only.rs"

[[example]]
name = "chainstate-builder"
path = "examples/chainstate-builder.rs"
